projetos/local/athena/athena-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: athena-api
  labels:
    app: athena-api
    environment: local
    stack: athena
