projetos/local/athena/athena-api/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: athena-minio-service
  labels:
    app: athena-minio
spec:
  type: ClusterIP
  selector:
    app: athena-minio
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: console
      protocol: TCP
      port: 9001
      targetPort: 9001
